--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* ===== BASE STYLES ===== */
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -21,6 +23,12 @@ p {
   margin: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   width: 1158px;
   margin: 0 auto;
@@ -33,7 +41,12 @@ p {
   border-bottom: 1px solid #e7e9fc;
 }
 
-.nav {
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
   display: flex;
   align-items: center;
 }
@@ -49,16 +62,18 @@ p {
   margin-right: 76px;
 }
 
-.logo-studio {
+.logo-accent {
   color: #2e2f42;
 }
 
-.nav-list {
+.menu {
   display: flex;
   gap: 40px;
 }
 
-.nav-link {
+.menu-link {
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -66,31 +81,78 @@ p {
   color: #2e2f42;
 }
 
-/* ✅ ВАЖЛИВО ДЛЯ ТЕСТУ: hover + focus */
-.nav-link:hover,
-.nav-link:focus {
+.menu-link:hover,
+.menu-link:focus {
   color: #404bbf;
 }
 
-.address {
+.contacts {
   margin-left: auto;
   font-style: normal;
 }
 
-.address-list {
+.contacts-list {
   display: flex;
   gap: 40px;
 }
 
-.address-link {
+.contacts-link {
+  display: block;
+  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
-/* ✅ ВАЖЛИВО ДЛЯ ТЕСТУ: hover + focus */
-.address-link:hover,
-.address-link:focus {
+.contacts-link:hover,
+.contacts-link:focus {
   color: #404bbf;
+}
+
+/* ===== PORTFOLIO ===== */
+
+.portfolio {
+  padding: 120px 0;
+}
+
+.portfolio-title {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+}
+
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+  border: 1px solid #e7e9fc;
+}
+
+.portfolio-content {
+  padding: 32px 16px;
+}
+
+.portfolio-item-title {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.portfolio-item-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
