reset styles css to base only

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,28 @@
-/* styles for hw02 */
+/* ===== BASE RESET ===== */
 
-<link rel="stylesheet" href="./css/styles.css" />
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+}
