--- a/css/styles.css
+++ b/css/styles.css
@@ -101,3 +101,28 @@ img {
 .hero-button:focus {
   background-color: #404bbf;
 }
+
+/* ===== ADVANTAGES ===== */
+
+.advantages-title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.advantages-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.advantages-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
