--- a/css/styles.css
+++ b/css/styles.css
@@ -126,3 +126,15 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
+}
