--- a/css/styles.css
+++ b/css/styles.css
@@ -138,3 +138,24 @@ img {
   white-space: nowrap;
   border: 0;
 }
+
+/* ===== TEAM ===== */
+
+.team {
+  background-color: #f4f4fd;
+}
+
+.team-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.team-position {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
